--- a/myproject/templates/layout.html
+++ b/myproject/templates/layout.html
@@ -22,9 +22,12 @@
         </a> |
         <a href="{% url 'posts:list' %}">
             <span role="img" aria-label="Posts" title="Posts">📰</span>
-        </a> |
+        </a> | 
         <a href="{% url 'users:register' %}">
             <span role="img" aria-label="User Registration" title="User Registration">🚀</span>
+        </a> | 
+        <a href="{% url 'users:login' %}">
+            <span role="img" aria-label="User Login" title="User Login">🔏</span>
         </a>
     </nav>
     <main>
